export const snapshot = {};

snapshot[`Document Comment Add Command - With Body Flag 1`] = `
stdout:
"✓ Comment added to document spec-abc123
https://linear.app/team/document/spec-abc123#comment-uuid-1
"
stderr:
""
`;

snapshot[`Document Comment Add Command - With Reply To Flag 1`] = `
stdout:
"✓ Comment added to document spec-abc123
https://linear.app/team/document/spec-abc123#comment-uuid-2
"
stderr:
""
`;

snapshot[`Document Comment Add Command - With Body File 1`] = `
stdout:
"✓ Comment added to document spec-abc123
https://linear.app/team/document/spec-abc123#comment-uuid-3
"
stderr:
""
`;

snapshot[`Document Comment Add Command - Help 1`] = `
stdout:
"
Usage: add <document>

Description:

  Add a comment or reply to a document (by ID or slug)                            
                                                                                  
  Linear Markdown: a plain Linear URL creates a mention; \`@name\`, \`@[Name](id)\`,  
  and \`[Name](url)\` do not. Get a person's URL from the \`url\` field of            
  \`linear team members <TEAM> --json\`, or an issue's from \`linear issue url <ID>\`.
  Run \`linear markdown\` for collapsible sections and the full reference.          

Options:

  -h, --help                             - Show this help.                                                   
  -b, --body                <text>       - Comment body text                                                 
  --body-file               <path>       - Read comment body from a file (preferred for markdown content)    
  -p, --parent, --reply-to  <commentId>  - Reply to a top-level comment by ID (the reply joins that thread)  

"
stderr:
""
`;
